@@ -2,13 +2,15 @@ package pages;
 
 import io.cucumber.datatable.DataTable;
 import org.junit.Assert;
+import org.openqa.selenium.By;
 import org.openqa.selenium.NoSuchElementException;
 import org.openqa.selenium.WebElement;
 import org.openqa.selenium.support.FindBy;
+import utilities.JSUtils;
+import utilities.ReusableMethods;
 import java.util.List;
-
+import static stepDefinitions.Hooks.driver;
 import static utilities.ReusableMethods.*;
-
 
 public class AccountAddressPage extends CommonPage{
 
@@ -40,7 +42,38 @@ public class AccountAddressPage extends CommonPage{
     public List<WebElement> saveAddressBtns; //bana sonuncusu lazım
     @FindBy(xpath = "//div[@role='alert']")
     public WebElement successMsj;
-
+    @FindBy(xpath = "//button[@name='sales']")
+    public WebElement MySalesAddressBtn;
+    @FindBy(xpath = "//button[@class='btn btn-outline-success']")
+    public WebElement AddNewAddressBtn;
+    @FindBy(xpath = "//input[@type='search']")
+    public WebElement SearchPlacesInput;
+    @FindBy(xpath = "(//input[@id='postal'])[2]")
+    public WebElement PostaZipCodeInput;
+    @FindBy(xpath = "(//input[@id='isSellerAddress'])[2]")
+    public WebElement MarkAsASalerAddressInput;
+    @FindBy(xpath = "(//button[@type='submit'])[2]")
+    public WebElement MySalesAddressSubmitBtn;
+    @FindBy(xpath = "//button[@type='submit']")
+    public WebElement MySalesAddressEditSubmitBtn;
+    @FindBy(xpath = "//div[@class='Toastify__toast-body toastr_custom-toastr__iiU37']")
+    public WebElement AlertYourAddresssuccessfullyAdded;
+    @FindBy(xpath = "//button[@class='mr-2 btn btn-outline-warning']")
+    public WebElement MySalesAddressEditBtn;
+    @FindBy(xpath = "//button[@class='btn btn-outline-danger']")
+    public WebElement MySalesAddressRemoveBtn;
+    @FindBy(xpath = "//h5[@class='text-center mb-4']")
+    public WebElement AreYouSureToDeleteTheAddressMessage;
+    @FindBy(xpath = "//div[@class='form-row']")
+    public WebElement AddressDetailsPage;
+    @FindBy(xpath = "//div[@class='text-center mb-2']")
+    public WebElement YesNoOptionsText;
+    @FindBy(xpath = "//div[@class='Toastify__toast-body toastr_custom-toastr__iiU37']")
+    public WebElement AlertYourAddresssuccessfullyUpdated;
+    @FindBy(xpath = "//input[@id='addressTitle']")
+    public WebElement AddressTitleInput;
+    @FindBy(xpath = "//button[@class='address_accordionTab__116wZ address_accordionActive__2fQgS']")
+    public WebElement MySalesAddressText;
 
     //My Sales Address a tıklar ve bu kısmında adress kayıtlı mı kontrol eder, addres varsa true yoksa false döner
     public boolean clickMySalesAddressBtnAndControlTheAdress() {
@@ -57,6 +90,42 @@ public class AccountAddressPage extends CommonPage{
             System.out.println("msjlar farklı");
         }
         return !flag;
+    }
+
+    public void areYouSureToDeleteYESorNO(String option){
+     WebElement element=driver.findElement(By.xpath("//button[text()='"+option+"']"));
+     JSUtils.clickElementByJS(element);
+    }
+
+    public void sendKeysAddressTitle(){
+        getAccountAddressPage().AddressTitleInput.clear();
+        ReusableMethods.sendText(getAccountAddressPage().AddressTitleInput,"Emily's Home Office");
+    }
+
+    public void addressOptions() throws InterruptedException {
+        Thread.sleep(3000);
+        System.out.println(driver.findElement(By.xpath("//ul[@class='list-group mt-2 autocomplete-dropdown-container']")).getText());
+        List<WebElement> list = driver.findElements(By.xpath("//ul[@class='list-group mt-2 autocomplete-dropdown-container']")).stream().toList();
+        list.getFirst().click();
+        Thread.sleep(3000);
+    }
+
+    public void sendKeysAddress() throws InterruptedException {
+        Thread.sleep(3000);
+        JSUtils.clickElementByJS(getAccountAddressPage().SearchPlacesInput);
+        ReusableMethods.sendText(getAccountAddressPage().SearchPlacesInput,"California");
+        getAccountAddressPage().SearchPlacesInput.click();
+    }
+
+    public void verifyPageUrl(String expectedUrl) {
+        //String expectedUrl = "https://test.urbanicfarm.com/account/address";
+        String actualUrl = driver.getCurrentUrl();
+        System.out.println("actual="+actualUrl);
+        Assert.assertEquals(expectedUrl, actualUrl);
+    }
+
+    public void sendKeysPostaZipCode(){
+        getAccountAddressPage().PostaZipCodeInput.sendKeys("95170");
     }
 
     //others section a tıklar
@@ -76,10 +145,10 @@ public class AccountAddressPage extends CommonPage{
             flag=false;
         }
         int j;
-        if (flag == false) {
+        if (!flag) {
             addNewAddressBtn.click();
             searchNewPlacesInput.sendKeys(dataTable.row(0).get(5));
-            suggestedAddressList.get(0).click();
+            suggestedAddressList.getFirst().click();
             for (int i = addressInputList.size()-1; i > addressInputList.size() - 6; i--) {
                 j = i - addressInputList.size() + 5;
                 if (i == addressInputList.size() - 2 || i == addressInputList.size() - 3) {
@@ -145,16 +214,10 @@ public class AccountAddressPage extends CommonPage{
         Assert.assertEquals(2,removeApprovalBtns.size());
     }
 
-
     //Remove btn a tıklar
     public void clickRemoveYesBtn() {
         waitForClickablility(removeYesBtn, 10);
         removeYesBtn.click();
     }
-
-
-
-
-
 }
 
